k8s/services/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-data
  labels:
    name: shopno-data
    app.kubernetes.io/part-of: shopnoltd
    app.kubernetes.io/component: database
    environment: production
