k8s/services/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: shopno-data
  labels:
    app.kubernetes.io/name: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
spec:
  selector:
    app.kubernetes.io/name: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

  type: ClusterIP
